--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,10 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="11" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:name="ApplicationContext"
+                 android:icon="@drawable/icon"
+                 android:label="@string/app_name"
+                 android:debuggable="true">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
