--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <application android:name="ApplicationContext"
                  android:icon="@drawable/icon"
                  android:label="@string/app_name"
-                 android:debuggable="true">
+                 android:debuggable="true"
+                 android:hardwareAccelerated="true">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
