--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,10 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="11" />
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />    
 
     <application android:name="ApplicationContext"
                  android:icon="@drawable/icon"
@@ -16,7 +20,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>        
+        
+        <activity android:name="CameraActivity"
+            android:label="@string/camera_activity"
+            android:screenOrientation="landscape">
+      </activity>        
 
     </application>
 </manifest>
