--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-sdk android:minSdkVersion="11" />
     
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" />    
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.front"
+                  android:required="false" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />    
 
     <application android:name="ApplicationContext"
