--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
                  android:label="@string/app_name"
                  android:debuggable="true"
                  android:hardwareAccelerated="true">
-        <activity android:name="MainActivity"
+        <activity android:name=".activities.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +25,11 @@
             </intent-filter>
         </activity>        
         
-        <activity android:name="CameraActivity"
+        <activity android:name=".activities.CameraActivity"
             android:label="@string/camera_activity"
             android:screenOrientation="landscape" />
             
-        <activity android:name="PhotographActivity"
+        <activity android:name=".activities.PhotographActivity"
             android:label="@string/photograph_activity" />            
 
     </application>
